infra/k8s/apps/backstage/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
    app.kubernetes.io/component: developer-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backstage
        app.kubernetes.io/component: developer-hub
    spec:
      containers:
        - name: backstage
          image: docker.io/radballmigi/backstage:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
          volumeMounts:
            - name: backstage-app-config
              mountPath: /app/app-config.production.yaml
              subPath: app-config.production.yaml
            - name: backstage-catalog
              mountPath: /app/catalog
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 7007
            initialDelaySeconds: 90
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
      volumes:
        - name: backstage-app-config
          configMap:
            name: backstage-app-config
        
        - name: backstage-catalog
          configMap:
            name: backstage-catalog
