infra/k8s/apps/backstage/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage
  namespace: backstage
  labels:
    app.kubernetes.io/name: backstage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backstage
  ports:
    - name: http
      port: 80
      targetPort: 7007
